--- a/index.html
+++ b/index.html
@@ -59,17 +59,22 @@
         <div class="container">
             <h2 class="subheader-2 subheader-2_black">Наши преимущества</h2>
             <div class="feautures__wrapper">
-                <div class="feautures__item">
-                    <img src="" alt="">
-                    <div class="item-title">Делимся опытом</div>
-                    <div class="item-description">Наши сотрудники всегда готовы поделиться своим...</div>
+                <div class="feautures-item">
+                    <img class="feautures-item__img" src="icons/2st_screen_know.svg" alt="brain">
+                    <div class="feautures-item__title">Делимся опытом</div>
+                    <div class="feautures-item__description">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
                 </div>
-
-                <div class="item">
-                    <img src="" alt="">
-                    <div class="item__title">Делимся опытом</div>
-                    <div class="item__description">Наши сотрудники всегда готовы поделиться своим...</div>
+                <div class="feautures-item">
+                    <img class="feautures-item__img" src="icons/2st_screen_health.svg" alt="pulse">
+                    <div class="feautures-item__title">Заботимся о здоровье</div>
+                    <div class="feautures-item__description">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
                 </div>
+                <div class="feautures-item">
+                    <img class="feautures-item__img" src="icons/2st_screen_run.svg" alt="run">
+                    <div class="feautures-item__title">Учим бегать</div>
+                    <div class="feautures-item__description">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span>I LOVE RUNNING.</span></div>
+                </div>
+                
             </div>
         </div>
     </div>
