--- a/index.html
+++ b/index.html
@@ -74,9 +74,22 @@
                     <div class="feautures-item__title">Учим бегать</div>
                     <div class="feautures-item__description">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span>I LOVE RUNNING.</span></div>
                 </div>
-                
             </div>
         </div>
     </div>
+
+    <div class="consultation">
+        <div class="container">
+            <h2 class="subheader-2 subheader-2_white consulation-subheader">Получите бесплатную консультацию по подбору пульсометра </h2>
+            <div class="consultation__descr">Просто заполните форму заявки<br>и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form" action="#">
+                <input name="name" required type="text" placeholder="Ваше имя">
+                <input name="phone" required type="tel" placeholder="Ваш телефон">
+                <input name="email" required type="email" placeholder="Ваш E-mail">
+
+                <button class="button button_submit">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+        
 </body>
 </html>
